--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 script:
-  - docker build -t builder/gcc
+  - docker build -t builder/gcc .
   - docker run builder/gcc cat /standalone-gcc-8.2.0.tar.gz >standalone-gcc-8.2.0.tar.gz
   - ls -lh standalone-gcc-8.2.0.tar.gz
 
