--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ script:
   - docker build -t builder/gcc .
   - docker run builder/gcc cat /standalone-gcc-8.2.0.tar.gz >standalone-gcc-8.2.0.tar.gz
   - ls -lh standalone-gcc-8.2.0.tar.gz
+  - ./upload.sh standalone-gcc-8.2.0.tar.gz
 
 
